Process Hacker

1.2.2.5
 * Now shows function parameters in call stack
 * Added Injector

1.2.1.5
 * Fixed disassemblies from PE window - they disassemble the right function now
 * Fixed UI inconsistencies
 * Allow Toolhelp module listings
 * Updated help
 * Fixed service start/stop buttons in service window

1.2.1.0
 * Can now display services
 * Displays services in process tooltips

1.2.0.5
 * Updated credits
 * Fixed crash when opening two thread inspectors with the same process and thread
 * Disassembler window can now display backward short jumps (>0x7fffffff)
 * Now unloads symbols for all other EXEs before opening the thread inspector
 * Improvements in symbol loading

1.2.0.0
 * Added PE Inspector (can read exe/dll/sys files and their properties)
 * Added "Search Online" menu item
 * Added highlighting of processes and threads
 * Added "Always on Top" menu item
 * Added status bar messages and log
 * Added "Go to Parent" menu item
 * Removed "Close Active Window" menu item - practically same as "Terminate Process"
 * Added disassembler
 * Added Thread Inspector - shows call stack of threads

1.1.5.0
 * Fixed memory leak with process icons
 * Removed useless starting "\" in account names
 * Fixed group menu item enabling and disabling
 * Added filtering of search results

1.1.4.5
 * Fixed crash when attempting to open privileges for System on XP
 * Added Groups Window (to view process groups)
 * Fixed Search window startup position

1.1.4.0
 * Enabled Select All for all lists on the main window
 * Added Privileges Window (to enable, disable and remove privileges)
 * Fixed error messages - they now have the correct Win32 error descriptions

1.1.3.5
 * Now saves column settings
 * Now saves results and memory window settings
 * Now saves selected tab

1.1.3.0
 * Completely rewrote thread list code
 * Can now display kernel threads on Vista
 * Disables thread priority menu item when there is an error
 * Now displays process 0 as System Idle Process