@@ -171,13 +171,13 @@
             this.selectAllServiceMenuItem = new System.Windows.Forms.MenuItem();
             this.getSNFAMenuItem = new System.Windows.Forms.MenuItem();
             this.exitProcessProcessMenuItem = new System.Windows.Forms.MenuItem();
+            this.menuItem10 = new System.Windows.Forms.MenuItem();
+            this.FSPWSSIDMenuItem = new System.Windows.Forms.MenuItem();
             this.listProcesses = new ProcessHacker.ProcessList();
             this.buttonSearch = new wyDay.Controls.SplitButton();
             this.listThreads = new ProcessHacker.ThreadList();
             this.listServices = new ProcessHacker.ServiceList();
             this.vistaMenu = new wyDay.Controls.VistaMenu(this.components);
-            this.menuItem10 = new System.Windows.Forms.MenuItem();
-            this.FSPWSSIDMenuItem = new System.Windows.Forms.MenuItem();
             this.panelProc.SuspendLayout();
             this.panelVirtualProtect.SuspendLayout();
             ((System.ComponentModel.ISupportInitialize)(this.statusGeneral)).BeginInit();
@@ -966,7 +966,7 @@
             // 
             // statusBar
             // 
-            this.statusBar.Location = new System.Drawing.Point(0, 441);
+            this.statusBar.Location = new System.Drawing.Point(0, 436);
             this.statusBar.Name = "statusBar";
             this.statusBar.Panels.AddRange(new System.Windows.Forms.StatusBarPanel[] {
             this.statusGeneral,
@@ -1010,7 +1010,7 @@
             this.tabControlBig.Location = new System.Drawing.Point(0, 0);
             this.tabControlBig.Name = "tabControlBig";
             this.tabControlBig.SelectedIndex = 0;
-            this.tabControlBig.Size = new System.Drawing.Size(804, 441);
+            this.tabControlBig.Size = new System.Drawing.Size(804, 436);
             this.tabControlBig.TabIndex = 6;
             // 
             // tabProcesses
@@ -1019,7 +1019,7 @@
             this.tabProcesses.Location = new System.Drawing.Point(4, 22);
             this.tabProcesses.Name = "tabProcesses";
             this.tabProcesses.Padding = new System.Windows.Forms.Padding(3);
-            this.tabProcesses.Size = new System.Drawing.Size(796, 415);
+            this.tabProcesses.Size = new System.Drawing.Size(796, 410);
             this.tabProcesses.TabIndex = 0;
             this.tabProcesses.Text = "Processes";
             this.tabProcesses.UseVisualStyleBackColor = true;
@@ -1038,7 +1038,7 @@
             // splitMain.Panel2
             // 
             this.splitMain.Panel2.Controls.Add(this.tabControl);
-            this.splitMain.Size = new System.Drawing.Size(790, 409);
+            this.splitMain.Size = new System.Drawing.Size(790, 404);
             this.splitMain.SplitterDistance = 348;
             this.splitMain.TabIndex = 3;
             // 
@@ -1052,7 +1052,7 @@
             this.tabControl.Location = new System.Drawing.Point(0, 0);
             this.tabControl.Name = "tabControl";
             this.tabControl.SelectedIndex = 0;
-            this.tabControl.Size = new System.Drawing.Size(438, 409);
+            this.tabControl.Size = new System.Drawing.Size(438, 404);
             this.tabControl.TabIndex = 5;
             // 
             // tabProcess
@@ -1062,7 +1062,7 @@
             this.tabProcess.Location = new System.Drawing.Point(4, 22);
             this.tabProcess.Name = "tabProcess";
             this.tabProcess.Padding = new System.Windows.Forms.Padding(3);
-            this.tabProcess.Size = new System.Drawing.Size(430, 383);
+            this.tabProcess.Size = new System.Drawing.Size(430, 378);
             this.tabProcess.TabIndex = 4;
             this.tabProcess.Text = "Process";
             this.tabProcess.UseVisualStyleBackColor = true;
@@ -1089,7 +1089,7 @@
             this.treeMisc.Location = new System.Drawing.Point(6, 59);
             this.treeMisc.Name = "treeMisc";
             this.treeMisc.ShowNodeToolTips = true;
-            this.treeMisc.Size = new System.Drawing.Size(418, 318);
+            this.treeMisc.Size = new System.Drawing.Size(418, 313);
             this.treeMisc.TabIndex = 1;
             // 
             // tabThreads
@@ -1098,7 +1098,7 @@
             this.tabThreads.Location = new System.Drawing.Point(4, 22);
             this.tabThreads.Name = "tabThreads";
             this.tabThreads.Padding = new System.Windows.Forms.Padding(3);
-            this.tabThreads.Size = new System.Drawing.Size(430, 199);
+            this.tabThreads.Size = new System.Drawing.Size(430, 236);
             this.tabThreads.TabIndex = 6;
             this.tabThreads.Text = "Threads";
             this.tabThreads.UseVisualStyleBackColor = true;
@@ -1109,7 +1109,7 @@
             this.tabModules.Location = new System.Drawing.Point(4, 22);
             this.tabModules.Name = "tabModules";
             this.tabModules.Padding = new System.Windows.Forms.Padding(3);
-            this.tabModules.Size = new System.Drawing.Size(430, 199);
+            this.tabModules.Size = new System.Drawing.Size(430, 236);
             this.tabModules.TabIndex = 0;
             this.tabModules.Text = "Modules";
             this.tabModules.UseVisualStyleBackColor = true;
@@ -1128,7 +1128,7 @@
             this.listModules.Location = new System.Drawing.Point(3, 3);
             this.listModules.Name = "listModules";
             this.listModules.ShowItemToolTips = true;
-            this.listModules.Size = new System.Drawing.Size(424, 193);
+            this.listModules.Size = new System.Drawing.Size(424, 230);
             this.listModules.TabIndex = 1;
             this.listModules.UseCompatibleStateImageBehavior = false;
             this.listModules.View = System.Windows.Forms.View.Details;
@@ -1160,7 +1160,7 @@
             this.tabMemory.Location = new System.Drawing.Point(4, 22);
             this.tabMemory.Name = "tabMemory";
             this.tabMemory.Padding = new System.Windows.Forms.Padding(3);
-            this.tabMemory.Size = new System.Drawing.Size(430, 199);
+            this.tabMemory.Size = new System.Drawing.Size(430, 236);
             this.tabMemory.TabIndex = 1;
             this.tabMemory.Text = "Memory";
             this.tabMemory.UseVisualStyleBackColor = true;
@@ -1180,7 +1180,7 @@
             this.listMemory.Location = new System.Drawing.Point(3, 3);
             this.listMemory.Name = "listMemory";
             this.listMemory.ShowItemToolTips = true;
-            this.listMemory.Size = new System.Drawing.Size(424, 193);
+            this.listMemory.Size = new System.Drawing.Size(424, 230);
             this.listMemory.TabIndex = 2;
             this.listMemory.UseCompatibleStateImageBehavior = false;
             this.listMemory.View = System.Windows.Forms.View.Details;
@@ -1217,7 +1217,7 @@
             this.tabServices.Location = new System.Drawing.Point(4, 22);
             this.tabServices.Name = "tabServices";
             this.tabServices.Padding = new System.Windows.Forms.Padding(3);
-            this.tabServices.Size = new System.Drawing.Size(796, 231);
+            this.tabServices.Size = new System.Drawing.Size(796, 268);
             this.tabServices.TabIndex = 1;
             this.tabServices.Text = "Services";
             this.tabServices.UseVisualStyleBackColor = true;
@@ -1315,6 +1315,20 @@
             this.exitProcessProcessMenuItem.Text = "Exit Process";
             this.exitProcessProcessMenuItem.Click += new System.EventHandler(this.exitProcessProcessMenuItem_Click);
             // 
+            // menuItem10
+            // 
+            this.menuItem10.Index = 1;
+            this.menuItem10.MenuItems.AddRange(new System.Windows.Forms.MenuItem[] {
+            this.getSNFAMenuItem,
+            this.FSPWSSIDMenuItem});
+            this.menuItem10.Text = "Tools";
+            // 
+            // FSPWSSIDMenuItem
+            // 
+            this.FSPWSSIDMenuItem.Index = 1;
+            this.FSPWSSIDMenuItem.Text = "Find SYSTEM processes with same Session ID";
+            this.FSPWSSIDMenuItem.Click += new System.EventHandler(this.FSPWSSIDMenuItem_Click);
+            // 
             // listProcesses
             // 
             this.listProcesses.Dock = System.Windows.Forms.DockStyle.Fill;
@@ -1322,7 +1336,7 @@
             this.listProcesses.Location = new System.Drawing.Point(0, 0);
             this.listProcesses.Name = "listProcesses";
             this.listProcesses.Provider = null;
-            this.listProcesses.Size = new System.Drawing.Size(348, 408);
+            this.listProcesses.Size = new System.Drawing.Size(348, 403);
             this.listProcesses.TabIndex = 4;
             this.listProcesses.SelectedIndexChanged += new System.EventHandler(this.listProcesses_SelectedIndexChanged);
             this.listProcesses.KeyDown += new System.Windows.Forms.KeyEventHandler(this.listProcesses_KeyDown);
@@ -1346,7 +1360,7 @@
             this.listThreads.Location = new System.Drawing.Point(3, 3);
             this.listThreads.Name = "listThreads";
             this.listThreads.Provider = null;
-            this.listThreads.Size = new System.Drawing.Size(424, 193);
+            this.listThreads.Size = new System.Drawing.Size(424, 230);
             this.listThreads.TabIndex = 0;
             this.listThreads.DoubleClick += new System.EventHandler(this.listThreads_DoubleClick);
             // 
@@ -1357,7 +1371,7 @@
             this.listServices.Location = new System.Drawing.Point(3, 3);
             this.listServices.Name = "listServices";
             this.listServices.Provider = null;
-            this.listServices.Size = new System.Drawing.Size(790, 225);
+            this.listServices.Size = new System.Drawing.Size(790, 262);
             this.listServices.TabIndex = 0;
             this.listServices.DoubleClick += new System.EventHandler(this.listServices_DoubleClick);
             // 
@@ -1365,25 +1379,11 @@
             // 
             this.vistaMenu.ContainerControl = this;
             // 
-            // menuItem10
-            // 
-            this.menuItem10.Index = 1;
-            this.menuItem10.MenuItems.AddRange(new System.Windows.Forms.MenuItem[] {
-            this.getSNFAMenuItem,
-            this.FSPWSSIDMenuItem});
-            this.menuItem10.Text = "Tools";
-            // 
-            // FSPWSSIDMenuItem
-            // 
-            this.FSPWSSIDMenuItem.Index = 1;
-            this.FSPWSSIDMenuItem.Text = "Find SYSTEM process with same Session ID";
-            this.FSPWSSIDMenuItem.Click += new System.EventHandler(this.FSPWSSIDMenuItem_Click);
-            // 
             // HackerWindow
             // 
             this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
-            this.ClientSize = new System.Drawing.Size(804, 463);
+            this.ClientSize = new System.Drawing.Size(804, 458);
             this.Controls.Add(this.tabControlBig);
             this.Controls.Add(this.statusBar);
             this.Controls.Add(this.panelVirtualProtect);
