@@ -3,6 +3,7 @@ Process Hacker
 1.2.2.5
  * Now shows function parameters in call stack
  * Added Injector
+ * Added "Get Symbol Name From Address..." and "Find SYSTEM processes with same Session ID"
 
 1.2.1.5
  * Fixed disassemblies from PE window - they disassemble the right function now
